[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-alint-agent"
version = "0.1.0"
description = "ALINT-PRO LangGraph Agent Server entrypoint"
requires-python = ">=3.12,<3.13"
dependencies = [
  "asyncpg==0.31.0",
  "deepagents==0.5.3",
  "faiss-cpu==1.13.2",
  "fastmcp==3.1.0",
  "langchain==1.2.15",
  "langchain-anthropic==1.4.1",
  "langchain-community==0.4.1",
  "langchain-core==1.3.0",
  "langchain-google-genai==4.2.1",
  "langchain-huggingface==1.2.1",
  "langchain-mcp-adapters==0.2.1",
  "langchain-ollama==1.0.1",
  "langchain-openai==1.1.10",
  "langchain-tavily==0.2.17",
  "langchain-text-splitters==1.1.1",
  "langgraph==1.1.6",
  "langgraph-checkpoint==4.0.1",
  "langgraph-checkpoint-postgres==3.0.4",
  "langgraph-prebuilt==1.0.9",
  "mcp==1.26.0",
  "openai==2.20.0",
  "psycopg[binary,pool]==3.3.3",
  "pydantic[email]==2.11.7",
  "pypdf==6.9.1",
  "pymupdf==1.27.1",
  "python-dotenv==1.1.1",
  "requests==2.32.5"
]

[project.optional-dependencies]
server = ["langgraph-cli[inmem]"]

[tool.setuptools]
py-modules = [
  "AST",
  "agentic_rag",
  "config",
  "llm_factory",
  "long_term_memory",
  "mcp_lint",
  "reflection_middleware",
  "utils"
]
packages = ["agent", "agent.nodes", "prompts", "langgraph_server"]
